--- a/playground/Hector_Experiment1/.project
+++ b/playground/Hector_Experiment1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SuperPowerFirmware</name>
+	<name>Hector_experiment</name>
 	<comment></comment>
 	<projects>
 	</projects>
