new version of openocd cfg file with support for all the Raspberry
this file adds support for all the versions of the Raspberry Pi, the
coeficients of the variables are based on
https://raw.githubusercontent.com/lupyuen/stm32bluepill-mynewt-sensor/nrf52/scripts/nrf52/swd-pi.ocd

and had been tested with only the RPI3B+ so further testing it's required

--- a/daemon/SuperPower.cfg
+++ b/daemon/SuperPower.cfg
@@ -7,12 +7,13 @@
 
 # The adapter can be selected by setting the variable _PROBE to the
 # respective value. List of supported adapters:
-# - ST-LINK: for the SWD pins of the board
+# - ST-LINK: for the SWD pins of the probe
 # - Raspberry Pi: this option simulates the swd comunication using
-#   the GPIO pins
+#   the GPIO pins, and the specific version of the Raspberry Pi must
+#   be provided (RPI4, RPI3, RPI2 or RPI1)
 #
-# Interface Type: STLINK or RPI
-set _PROBE "RPI"
+# Interface Type: STLINK or Raspberry Pi options (RPI4, RPI3, RPI2 or RPI1)
+set _PROBE "RPI3"
 
 # When you have the Reset pin connected via the respective jumper on
 # the SuperPower board, then the hardware reset control can be used.
@@ -27,17 +28,6 @@ set _PROBE "RPI"
 # Use the Reset Button: NO or YES
 set _USE_RST_PIN "YES"
 
-# If the interface type is RPI, then the communication is done by
-# bit-banging the GPIO pins directly. Depending on the type of
-# Raspberry you are using for the debugging different speed and base
-# addresses for the peripherals have to be used. There are two classes:
-# - the RPi 1 and the Pi Zero W are in the slow class (value SLOW)
-# - all other Raspberries are in the fast class (value FAST)
-# Set the variable _RPI_SPEED accordingly. If in doubt set to FAST
-#
-# RPi speed: SLOW (Pi Zero W, Pi 1) or FAST (Pi 2+)
-set _RPI_SPEED "FAST"
-
 # Thread aware debugging
 # By default gdb does not know that the debugged program includes an RTOS
 # so the program will be jumping from task to task and inside the FreeRTOS
@@ -50,23 +40,14 @@ set _RPI_SPEED "FAST"
 # TO UNDERSTAND HOW TO CONFIGURE AND USE THIS FUNCTIONALITY.
 
 # Use thread aware debugging: NO or YES
-set _FREERTOS_DBG "YES"
+set _FREERTOS_DBG "NO"
 
 ####################################################################
 echo "SuperPower"
-if [expr [string compare $_PROBE "RPI"] == 0] {
-	echo "Raspberry Pi selected as adapter for debugging"
-	# source [find interface/my-raspberrypi-native.cfg]
-	interface bcm2835gpio
 
-	if [expr [string compare $_RPI_SPEED "SLOW"] == 0] {
-		bcm2835gpio_peripheral_base 0x20000000
-		bcm2835gpio_speed_coeffs 113714 28
-	} else {
-		bcm2835gpio_peripheral_base 0x3F000000
-		bcm2835gpio_speed_coeffs 146203 36
-	}
-	# Define the pins for the SWD pins: swclk swdio
+proc rpix_swd_config {} {
+	global _USE_RST_PIN
+	interface bcm2835gpio
 	bcm2835gpio_swd_nums 27 17
 	transport select "swd"
 
@@ -88,22 +69,50 @@ if [expr [string compare $_PROBE "RPI"] == 0] {
 		echo "The reset pin will NOT be used"
 		reset_config none separate
 	}
-} elseif [expr [string compare $_PROBE "STLINK"] == 0] {
-	echo "st-link selected as adapter for debbuging"
-	source [find interface/stlink-v2-1.cfg]
-	transport select "hla_swd"
-	reset_config srst_only srst_nogate connect_assert_srst
-} else {
-	echo "Super power: error invalid probe selected, check probe selection: RPI or STLINK are the only options"
-	return -code -1
 }
 
+switch $_PROBE {
+	"RPI4" {
+		rpix_swd_config
+		echo "Raspberry Pi 4 selected as adapter for debbuging"
+		bcm2835gpio_peripheral_base 0xFE000000
+		bcm2835gpio_speed_coeffs 236181 60
+	}
+	"RPI3" {
+		# For Pi 3 BCM2837 (1200Mhz)
+		rpix_swd_config
+		echo "Raspberry Pi 3 selected as adapter for debbuging"
+		bcm2835gpio_peripheral_base 0x3F000000
+		bcm2835gpio_speed_coeffs 194938 48
+	}
+	"RPI2" {
+		# For Pi 2 BCM2836 (900Mhz)
+		rpix_swd_config
+		echo "Raspberry Pi 2 selected as adapter for debbuging"
+		bcm2835gpio_peripheral_base 0x3F000000
+		bcm2835gpio_speed_coeffs 146203 36
+	}
+	"RPI1" {
+		# For Pi 1 BCM2835 (700Mhz)
+		rpix_swd_config
+		echo "Raspberry Pi 1 selected as adapter for debbuging"
+		bcm2835gpio_peripheral_base 0x20000000
+		bcm2835gpio_speed_coeffs 113714 28
+	}
+	"STLINK" {
+		echo "st-link selected as adapter for debbuging"
+		source [find interface/stlink-v2-1.cfg]
+		transport select "hla_swd"
+		reset_config srst_only srst_nogate connect_assert_srst
+	}
+	default {
+		echo "Super power: error invalid probe selected, check probe selection: RPI4, RPI3, RPI2, RPI1 or STLINK are the available options"
+		return -code -1
+	}
+
+}
 
 bindto 0.0.0.0
-
-# JB Remove after Review
-# JB The work area size will be retrieved by the device file, setting it is not necessary
-#set WORKAREASIZE 0x8000
 
 set CHIPNAME STM32F411RETx
 set BOARDNAME NUCLEO-F411RE
@@ -131,8 +140,6 @@ if [expr [string compare $_FREERTOS_DBG "YES"] == 0] {
 	echo "FreeRTOS aware debugging enabled"
 	$_TARGETNAME configure -rtos FreeRTOS -work-area-phys 0x20000000 -work-area-size $_WORKAREASIZE -work-area-backup 0
 }
-# JB set in stm32 configuration
-# set _TARGETNAME $CHIPNAME.cpu
 
 init
 #targets
@@ -155,7 +162,6 @@ proc rst_proc {} {
 	#halt
 	#reset init
 }
-
 
 if [expr [string compare $_USE_RST_PIN "NO"] == 0] {
 	echo "defining software reset"
