--- a/firmware/SuperPowerFirmware/.cproject
+++ b/firmware/SuperPowerFirmware/.cproject
@@ -95,6 +95,8 @@
                                     									
                                     <listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/include"/>
                                     									
+                                    <listOptionValue builtIn="false" value="../Middlewares/Third_Party/u8g2/csrc"/>
+                                    									
                                     <listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2"/>
                                     									
                                     <listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F"/>
